--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
-    <script async type="text/javascript" src="MetallC64.js"></script>
+    <script async type="text/javascript" src="./assets/MetallC64.js"></script>
   </body>
 </html>
