--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>MetallC64</title>
-  </head>
-  <body>
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
-    <script async type="text/javascript" src="./assets/MetallC64.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>MetallC64</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel='stylesheet' href='./assets/style.css' >
+	</head>
+		<body>
+			<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
+			<script async type="text/javascript" src="./assets/MetallC64.js"></script>
+			<div>
+				<p class="text_1" style="font-size: 16px;">MetallC64-Web</p>
+				<div>
+					<a href="https://github.com/beddinao/MetallC64" ><p class="text_1" style="font-size: 13px;">Original Project</p></a>
+				</div>
+			</div>
+		</body>
 </html>
