--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div>
 				<p class="text_1" style="font-size: 16px;">MetallC64-Web</p>
 				<div>
-					<a href="https://github.com/beddinao/MetallC64" ><p class="text_1" style="font-size: 13px;">Original Project</p></a>
+					<a href="https://github.com/beddinao/MetallC64" target="_blank" ><p class="text_1" style="font-size: 13px;">Original Project</p></a>
 				</div>
 			</div>
 		</body>
