--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
 				</div>
 				<div>
 					<p class="text_3" style="font-size: 11px;">select program to load from collection: </p>
+					<button id="pr_btn">Chillin.prg</button>
+					<button id="pr_btn">Amiga-Ball.prg</button>
 					<button id="pr_btn">petsciitracing.prg</button>
 					<button id="pr_btn">noslackers.prg</button>
+					<button id="pr_btn">globe_vector.prg</button>
 					<button id="pr_btn">hole_vector.prg</button>
 					<button id="pr_btn">Show_Time.prg</button>
+					<button id="pr_btn">obey.prg</button>
+					<button id="pr_btn">wool_on_her_mind.prg</button>
+					<button id="pr_btn">Metal_Up_Your_As.prg</button>
+					<button id="pr_btn">Magic_Bytes.prg</button>
 					<button id="pr_btn">N00NEFUKWITEN0NE.prg</button>
 					<button id="pr_btn">basictetris.prg</button>
 					<button id="pr_btn">bigpixelnyan.prg</button>
