--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div>
 						<p class="text_3" style="font-size: 11px;">clear program from memory: </p>
-						<button id="clr_button">CLR</button>
+						<button id="clr_button">CLR/RST</button>
 					</div>
 				</div>
 			</div>
