--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>MetallC64</title>
+		<title>C64 EMU</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="./assets/svgs/favicon.svg">
 		<link rel='stylesheet' href='./assets/style.css' >
@@ -13,11 +13,11 @@
 				<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
 				<textarea id="console" rows="16" disabled></textarea>
 			</div>
-			<script async type="text/javascript" src="./assets/MetallC64.js"></script>
+			<script async type="text/javascript" src="./assets/c64_emu.js"></script>
 			<div>
-				<p class="text_1" style="font-size: 16px;">MetallC64-Web</p>
+				<p class="text_1" style="font-size: 16px;">web Commodore 64</p>
 				<div>
-					<a href="https://github.com/beddinao/MetallC64" target="_blank" ><p class="text_1" style="font-size: 13px;">Original C Project</p></a>
+					<a href="https://github.com/beddinao/commodore_64_emulator" target="_blank" ><p class="text_1" style="font-size: 13px;">Original C Project</p></a>
 				</div>
 				<div>
 					<p class="text_3" style="font-size: 11px;">select program to load from collection: </p>
